Fix grid item spacing

--- a/static/main.css
+++ b/static/main.css
@@ -43,7 +43,7 @@ nav { padding: 0 1em; }
 
 .grid > * { outline: 2px solid var(--gray); padding: .5em; }
 .grid .item {
-    margin: 0;
+    margin: 0 !important;
 
     display: block;
     overflow: hidden;
